# workspace

./: .gitattributes  .gitignore  README.md  git_push_config_init_github.sh
bash_env/: bash_profile  bashrc  cp_mac_env.sh  gdbinit  gdbinit.gdb-8.1.0  gitconfig  gitignore  go_profile  init_mac_git.sh  link.sh  linux_link.sh  mac_bash_profile  mac_bash_profile.new  mac_link.sh  profile  ssh.keys  vimrc  vimrc.v2  zshrc
bash_env/bash/: install.txt
bash_env/git/: README.md  git-lfs  git_link.sh  gitignore_global
bash_env/linux/: bash_profile  bashrc  gdbinit  gdbinit.gdb-9.2.0  gitconfig  init_linux_env.sh  linux_link.sh  profile  vimrc  zshrc  zshrc.pre-oh-my-zsh
bash_env/mac/: bash_profile  bash_profile.ori  bashrc  gdbinit  gitconfig  gitignore_global  init_mac_env.sh  zprofile  (+4 more)
cxx_standard_tools/: build.sh  c++14.cc  c++17.cc  cxx_path.sh  gcc  gdb  install_by_sourcecode.txt  install_by_yum.txt  readme.txt
opensource/: go.install.url  tensorflow.install.url
source/: study.code
study.code/: sftp-config.json
study.code/cxx_standard/c++17/: CMakeLists.txt  main.cpp
study.code/cxx_standard/c++17/base/: CMakeLists.txt  base.cc  base.h
test.code/: bashh
tools/: clear_log.sh  delete_JetBrains.sh  git.sh  goto.sh  goto_yundong_jump.sh  gtest.sh  install_local_env_readme.txt  linux-apt-get.install.url  linuxbrew.install.url  local_dev_env.sh  mac_update_local_brew_conda.sh  my_docker.sh  nodejs.install  sortware.list  sync_workdir.sh  update_local_brew_conda.sh  update_local_mac.sh  vim-7.4.tar.bz2  vtune.sh  wget.install.gcc921.sh  yum.install.gcc921.sh
(+394 files in other folders)
